# ROS2Project2-SURETRUST

./: .gitignore  project_structure.txt  startup.sh
aesculon/: README.md  package.xml  setup.cfg  setup.py
aesculon/action/: Judgment.action
aesculon/aesculon/: console_node.py  core_node.py
aesculon/launch/: dashboard.launch.py  ignite.launch.py
aesculon/test/: test_copyright.py
ros2_project2/: package.xml  setup.cfg  setup.py
ros2_project2/launch/: simulation.launch.py
ros2_project2/ros2_project2/: mission_server.py
src/aesculon/: CMakeLists.txt  README.md  package.xml  presentation.tex
src/aesculon/action/: Judgment.action
src/aesculon/aesculon/: console_node.py  core_node.py  vision_node.py
src/aesculon/config/: reactor_params.yaml
src/aesculon/launch/: dashboard.launch.py  ignite.launch.py
src/ros2_project2/: README.md  setup.py
src/ros2_project2/launch/: mission.launch.py
src/ros2_project2/ros2_project2/: mission_client.py  mission_server.py
src/ros2_project2/urdf/: robot.urdf.xacro
src/tutorial_interfaces/: package.xml
src/tutorial_interfaces/action/: Mission.action
src/tutorial_interfaces/srv/: MotorEnable.srv
tutorial_interfaces/: CMakeLists.txt
tutorial_interfaces/srv/: Calculator.srv
